scribble-test/src/test/resources/bad/reach/globals/gdo/Test03.scr
module bad.reach.globals.gdo.Test03;


import bad.reach.globals.gdo.pack1.Test03b;


global protocol Foo(role A, role B)
{
	1() from A to B;
	do bad.reach.globals.gdo.pack1.Test03b.Bar(A, B);
	2() from A to B;
}

